--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <title>Mario Yordanov</title>
 </head>
 
 <body>
     <!--Navigation-->
     <header class="back-gradient">
-        <div id="brand" class="hover-animation"><a href="#elcome-section">Mario Yordanov</a></div>
+        <div id="brand" class="hover-animation"><a href="#welcome-section">Mario Yordanov</a></div>
         <nav id="navbar">
             <ul>
                 <li><a href="#welcome-section">Home</a></li>
-                <li><a href="#projects-header">Projects</a></li>
+                <li><a href="#about-me">About me</a></li>
+                <li><a href="#projects-stopping-point">Projects</a></li>
                 <li><a href="#contacts">Contacts</a></li>
             </ul>
         </nav>
@@ -26,7 +28,8 @@
             <div class="bar3"></div>
             <ul class="mobile-menu">
                 <li><a href="#welcome-section">Home</a></li>
-                <li><a href="#projects-header">Projects</a></li>
+                <li><a href="#about-me">About me</a></li>
+                <li><a href="#projects-stopping-point">Projects</a></li>
                 <li><a href="#contacts">Contacts</a></li>
             </ul>
         </div>
@@ -35,61 +38,106 @@
     <main class="container">
         <!--Welcome Screen-->
         <section id="welcome-section" class="main-section">
-            <h1 id="title" class="text-gradient">Hi, it's me, Mario</h1>
+            <h1 id="title" class="text-gradient">Hi, I'm Mario</h1>
             <p id="subtitle">A JavaScript enthusiast</p>
         </section>
         <!--TODO: Short Introduction Section-->
         <!--Projects-->
-        <div>
-            <h2 id="projects-header" class="text-gradient">These are some of my projects</h2>
-        </div>
-        <section id="projects" class="main-section">
-            <div class="project-tile">
-                <div class="img-wrapper">
-                    <a href="https://codepen.io/necrobread/pen/mdBGdjR"><img src="https://i.ibb.co/Tcb4yRZ/Tolkien.png"
-                            alt="">
-                    </a>
+        <section id="about-me" class="main-section">
+            <h2 class="">About me</h2>
+            <div id="bio-wrapper">
+                <div>
+                    <p>Hello! My name is Mario Yordanov and I have just started my journey in web development.
+                        My professional expirience is mainly in print as a prepress specialist. Lorem ipsum dolor, sit
+                        amet
+                        consectetur adipisicing elit. Deleniti eos doloremque odit laboriosam architecto commodi laborum
+                        animi
+                        recusandae molestiae nulla, veniam, dolores, iste officiis. Pariatur ipsam sed deleniti
+                        distinctio
+                        laboriosam! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis fugit
+                        asperiores
+                        adipisci enim aut? Harum est laudantium temporibus sapiente veritatis at animi doloremque facere
+                        quia, facilis eaque explicabo saepe placeat.</p>
+                    <p>My main interests are in the MERN stack.</p>
                 </div>
-                <h3>Tolkien Tribute</h3>
+                <img id="portrait" src="https://i.ibb.co/nnKzJV1/30738871-1878515155506645-7732179919169765673-n.jpg"
+                    alt="Author's picture">
             </div>
-            <div class="project-tile">
-                <div class="img-wrapper">
-                    <img src="https://i.ibb.co/DzLbLd4/survey.png" alt="">
-                </div>
-                <h3>Survey</h3>
+        </section>
+        <div id="projects-stopping-point"></div>
+        <section id="projects-section" class="main-section">
+            <div>
+                <h2 id="projects-header" class="text-gradient">These are some of my projects</h2>
             </div>
-            <div class="project-tile">
-                <div class="img-wrapper">
-                    <img src="https://i.ibb.co/YWKzHDL/sudoku.png" alt="">
+            <div id="projects">
+                <div class="project-tile">
+                    <div class="img-wrapper">
+                        <a href="https://codepen.io/necrobread/pen/mdBGdjR"><img
+                                src="https://i.ibb.co/Tcb4yRZ/Tolkien.png" alt="">
+                        </a>
+                    </div>
+                    <h3>Tolkien Tribute</h3>
                 </div>
-                <h3>Sudoku</h3>
-            </div>
-            <div class="project-tile">
-                <div class="img-wrapper">
-                    <img src="https://i.ibb.co/R7czVrz/calculator-spine.png" alt="">
+                <div class="project-tile">
+                    <div class="img-wrapper">
+                        <img src="https://i.ibb.co/DzLbLd4/survey.png" alt="">
+                    </div>
+                    <h3>Survey</h3>
                 </div>
-                <h3>Book spine calculator</h3>
-            </div>
-            <div class="project-tile">
-                <div class="img-wrapper">
-                    <img src="https://i.ibb.co/pbMyK6H/hello-git.png" alt="">
+                <div class="project-tile">
+                    <div class="img-wrapper">
+                        <img src="https://i.ibb.co/YWKzHDL/sudoku.png" alt="">
+                    </div>
+                    <h3>Sudoku</h3>
                 </div>
-                <h3>Hello World in GitHub</h3>
-            </div>
-            <div class="project-tile">
-                <div class="img-wrapper">
-                    <img src="https://i.ibb.co/1vw9fnT/hello-code.png" alt="">
+                <div class="project-tile">
+                    <div class="img-wrapper">
+                        <img src="https://i.ibb.co/R7czVrz/calculator-spine.png" alt="">
+                    </div>
+                    <h3>Book spine calculator</h3>
                 </div>
-                <h3>Hello World in CodePen</h3>
+                <div class="project-tile">
+                    <div class="img-wrapper">
+                        <img src="https://i.ibb.co/pbMyK6H/hello-git.png" alt="">
+                    </div>
+                    <h3>Hello World in GitHub</h3>
+                </div>
+                <div class="project-tile">
+                    <div class="img-wrapper">
+                        <img src="https://i.ibb.co/1vw9fnT/hello-code.png" alt="">
+                    </div>
+                    <h3>Hello World in CodePen</h3>
+                </div>
             </div>
         </section>
         <section id="contacts" class="main-section back-gradient">
             <div class="contacts-div">
-                <h2>Contact me at</h2>
+                <h2>Contacts</h2>
                 <ul>
-                    <li><a id="profile-link" href="https://github.com/NecroBread" target="_blank">GitHub</a></li>
-                    <li><a href="#">LinkedIn</a></li>
-                    <li><a href="#">Send email</a></li>
+                    <li>
+                        <a class="profile-link" href="https://github.com/NecroBread" target="_blank">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
+                                class="bi bi-github" viewBox="0 0 16 16">
+                                <path
+                                    d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
+                                class="bi bi-linkedin" viewBox="0 0 16 16">
+                                <path
+                                    d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z" />
+                            </svg></a>
+                    </li>
+                    <li>
+                        <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
+                                class="bi bi-envelope" viewBox="0 0 16 16">
+                                <path
+                                    d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z" />
+                            </svg>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </section>
