--- a/index.html
+++ b/index.html
@@ -52,25 +52,39 @@
             <div class="set-max-width">
                 <h2 class="">About me</h2>
                 <div id="bio-wrapper">
-                    <div class="text-about-me">
-                        <p>Hello! My name is Mario Yordanov and I have just started my journey in web development.
-                            My professional expirience is mainly in print as a prepress specialist. Lorem ipsum dolor,
-                            sit
-                            amet
-                            consectetur adipisicing elit. Deleniti eos doloremque odit laboriosam architecto commodi
-                            laborum
-                            animi
-                            recusandae molestiae nulla, veniam, dolores, iste officiis. Pariatur ipsam sed deleniti
-                            distinctio
-                            laboriosam! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis fugit
-                            asperiores
-                            adipisci enim aut? Harum est laudantium temporibus sapiente veritatis at animi doloremque
-                            facere
-                            quia, facilis eaque explicabo saepe placeat.</p>
-                        <p>My main interests are in the MERN stack.</p>
-                    </div>
                     <div>
                         <img id="portrait" src="./links/author.jpg" alt="Author's picture">
+                    </div>
+                    <div class="text-about-me">
+                        <p>Hello! My name is Mario and I enjoy building things for the web.</p>
+                        <p>My professional experience is in print as a prepress specialist,
+                            occasionally leading my own projects.</p>
+                        <p>I have always had interest in the building blocks of the internet,
+                            build some simple websites and kept a blog, but now it's time to take it to the next level!
+                        </p>
+                        <p>My main goal is mastering the MERN stack (MongoDB, Express, React, Node.js).</p>
+                        <div class="skills-container">
+                            <div>
+                                <h3 class="skills-heading">Tech Stack</h3>
+                                <ul>
+                                    <li>MongoDB</li>
+                                    <li>Express</li>
+                                    <li>React</li>
+                                    <li>Node.js</li>
+                                    <li>Tailwind CSS</li>
+                                </ul>
+                            </div>
+                            <div>
+                                <h3 class="skills-heading">Tools</h3>
+                                <ul>
+                                    <li>Git + Github</li>
+                                    <li>Postman</li>
+                                    <li>Adobe InDesign</li>
+                                    <li>Adobe Illustrator</li>
+                                    <li>Adobe Photoshop</li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
