--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 </div>
                 <h2>... or send me an email</h2>
                 <div class="contact-form">
-                    <form action="https://formsubmit.co/dbc92f1e5d0c08c58abb11228cd94a61" method="POST">
+                    <form action="https://formsubmit.co/mariovyordanov@gmail.com" method="POST">
                         <input type="hidden" name="_subject" value="New email from the website!">
                         <div class="grid-form mb-1">
                             <!--Name and email of sender-->
