--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 </div>
                 <h2>... or send me an email</h2>
                 <div class="contact-form">
-                    <form action="https://formsubmit.co/mariovyordanov@gmail.com" method="POST">
+                    <form action="https://formspree.io/f/mwkyvlkj" method="POST">
                         <input type="hidden" name="_subject" value="New email from the website!">
                         <div class="grid-form mb-1">
                             <!--Name and email of sender-->
