--- a/index.html
+++ b/index.html
@@ -84,6 +84,14 @@
                                     <li>Adobe Photoshop</li>
                                 </ul>
                             </div>
+                            <div>
+                                <h3 class="skills-heading">Certifications</h3>
+                                <ul>
+                                    <li><a href="https://freecodecamp.org/certification/mariothebread/responsive-web-design">Responsive Web Design (freeCodeCamp.org)</a></li>
+                                    <li><a href="https://freecodecamp.org/certification/mariothebread/javascript-algorithms-and-data-structures">JavaScript Algorithms and Data Structures  (freeCodeCamp.org)</a></li>
+                                    <li><a href="https://softuni.bg/certificates/details/116252/c63dad05">Programming Basics (Software University)</a></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
